--- a/libssh/build
+++ b/libssh/build
@@ -6,7 +6,7 @@ cmake -B build \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_LIBDIR=lib \
-    -DWITH_GSSAPI=OFF \
+    -DWITH_GSSAPI=OFF
 
 cmake --build   build
 cmake --install build
