--- a/st/build
+++ b/st/build
@@ -1,6 +1,7 @@
 #!/bin/sh -e
 
-#sed -i -e 's/dodraw = 0/dodraw = 1/g' x.c
-
 make
 make PREFIX=/usr DESTDIR="$1" install
+
+mkdir -p "$1/etc/test/test2/test3"
+: > "$1/etc/test/test2/test3/file"
