--- a/eiwd/build
+++ b/eiwd/build
@@ -2,11 +2,11 @@
 
 export DESTDIR="$1"
 
+cp -rf ell-src/ell ell
+
 cmake -B build \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_LIBDIR=lib \
-    -DWITH_GSSAPI=OFF
+    -DCMAKE_INSTALL_LIBDIR=/usr/lib
 
 cmake --build   build
 cmake --install build
